<resources>
    <string name="app_name">Coins</string>
    <string name="coins_list">Coins List</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Something went wrong</string>
    <string name="price_for_coin">Price: %1$s USD</string>
    <string name="coin_created_at">Since %1$s</string>
    <string name="add_note">Add note</string>
    <string name="enter_note">Enter note</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="summary_statistics">Summary statistics</string>
    <string name="home">Home</string>
    <string name="summary">Summary</string>
    <string name="total_items_count">Total items count: %1$s</string>
    <string name="hidden_coins_count">Hidden coins count: %1$s</string>
    <string name="total_notes_count">Total notes count: %1$s</string>
    <string name="the_day_on_which_the_most_notes_were_taken">The day on which the most notes were taken: %1$s</string>
    <string name="member_for_days">Member for %1$s days</string>
</resources>